<resources>
    <string name="app_name">HomeInventory</string>
    <string name="products">Productos</string>
    <string name="customers">Clientes</string>
    <string name="edit">Editar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Search_bar">Nombre de producto</string>
    <string name="tittle_add">Nuevo producto</string>
    <string name="tittle_edit">Editar producto</string>

    <string name="nombre_field">Nombre del producto</string>
    <string name="nombre_2_field">Nombre alterno</string>
    <string name="precio_compra_field">P.compra</string>
    <string name="precio_venta_field">P.venta</string>
    <string name="codigo_barras_field">Codigo</string>
    <string name="observaciones_field">Otros</string>
    <string name="moneda">$</string>
    <string name="otros">Otros:</string>

    <string name="save">Guardar</string>
    <string name="processing">Procesando...</string>
    <string name="delete_dialog">¿Desea eliminar?</string>
    <string name="delete_dialog_ok">Aceptar</string>
    <string name="delete_dialog_cancel">Cancelar</string>
    <string name="delete_dialog_procesing">Eliminando...</string>

    <string name="open">Abrir</string>
    <string name="close">Cerrar</string>

</resources>