<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <item android:title="Productos">
        <menu>
            <item android:id="@+id/vProductos"
                android:title="@string/products"
                android:icon="@drawable/ic_car_shop" />
            <item android:id="@+id/vEditar"
                android:title="@string/edit"
                android:icon="@drawable/ic_edit" />
        </menu>
    </item>

    <item android:title="Clientes">
        <menu>
            <item android:id="@+id/vClientes"
                android:title="@string/customers"
                android:icon="@drawable/ic_customers" />
        </menu>
    </item>

</menu>