<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="298dp"
    android:layout_height="200dp"
    android:orientation="vertical"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:padding="12dp"
    android:gravity="center"
    android:background="@color/card_bg">

    <TextView
        android:id="@+id/tvDeleteMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_dialog"
        style="@style/tittle_dialog"
         />

    <LinearLayout
        android:id="@+id/llDeleteProcesing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="gone"
        >
        <ProgressBar
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="8dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_dialog_procesing"
            android:textSize="18sp"
            android:textColor="@color/black"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tvConfirmDialog"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        tool:text="Leche lala azul"
        android:textAllCaps="true"
        android:layout_marginVertical="8dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_dialog_cancel"
            android:layout_marginHorizontal="4dp"
            />

        <Button
            android:id="@+id/btnConfirmDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_dialog_ok"
            android:layout_marginHorizontal="4dp"
            android:backgroundTint="@color/red" />
    </LinearLayout>
</LinearLayout>