<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".edit_activities.NewProduct"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/llNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tittle_add"
            style="@style/tittle_activity"
            android:textAlignment="center"
            android:layout_marginVertical="10dp" />

        <EditText
            android:id="@+id/etNombre_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_field"
            android:singleLine="true"
            android:layout_marginVertical="8dp"/>

        <EditText
            android:id="@+id/etNombre2_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:hint="@string/nombre_2_field"
            android:singleLine="true" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/etPrecioCompra_new"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:hint="@string/precio_compra_field"
                android:inputType="number|numberDecimal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/etPrecioVenta_new"
                />

            <EditText
                android:id="@+id/etPrecioVenta_new"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:hint="@string/precio_venta_field"
                android:inputType="number|numberDecimal"
                app:layout_constraintStart_toEndOf="@+id/etPrecioCompra_new"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp">
            <EditText
                android:id="@+id/etCodigoBarra_new"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnCamera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/codigo_barras_field"
                android:singleLine="true" />

            <ImageButton
                android:id="@+id/btnCamera"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:backgroundTint="@color/btn_icon_camera_background"
                android:src="@drawable/ic_scan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/etCodigoBarra_new"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/btn_icon_camera_foreground" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <EditText
            android:id="@+id/etOtros_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:hint="@string/observaciones_field"
            android:singleLine="true" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <ImageView
                android:id="@+id/ivProducto"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@color/card_bg"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                android:layout_margin="16dp"
                />
            <ImageButton
                android:id="@+id/btnCleanImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_cancel"
                android:backgroundTint="@color/btn_icon_camera_background"
                app:tint="@color/btn_icon_camera_foreground"

                />
            <ImageButton
                android:id="@+id/btnAddImageFromGalery"
                android:src="@drawable/ic_add_photo"
                app:layout_constraintStart_toStartOf="@+id/ivProducto"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/btn_icon_camera_background"
                app:tint="@color/btn_icon_camera_foreground"
                />
            <ImageButton
                android:id="@+id/btnAddImageFromCamera"
                android:src="@drawable/ic_add_photo_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnAddImageFromGalery"
                android:backgroundTint="@color/btn_icon_camera_background"
                app:tint="@color/btn_icon_camera_foreground"
                android:layout_marginStart="8dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </LinearLayout>

    <Button
        android:id="@+id/btnSave_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/save" />

    <include
        android:id="@+id/loading_state"
        layout="@layout/loading_dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>