<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="174dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    app:cardBackgroundColor="@color/card_bg_gray"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            >
            <TextView
                android:id="@+id/tvNombreProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="text"
                style="@style/product_name"
                android:layout_gravity="center"
                />
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/codigo_barras_field"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tvCodigoBarra"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:text="12354ADFD"
                android:layout_marginStart="8dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precio_compra_field"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tvPrecioCompra"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:text="12354ADFD"
                android:layout_marginStart="8dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precio_venta_field"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tvPrecioVenta"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:text="12354ADFD"
                android:layout_marginStart="8dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/observaciones_field"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tvObservaciones"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:text="12354ADFD"
                android:layout_marginStart="8dp"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
